# pld-aml-detector

./: .gitignore  Procfile  README.md  pyproject.toml  railway.toml  requirements.txt
dashboard/: app.py  requirements.txt
dashboard/data/: adaptive_thresholds.json  error_features.csv  graph_interactive.html  graph_summary.json  graph_top_hubs.csv  metrics.json  pr_curve.json  roc_curve.json  scores.csv  shap_ae.json  shap_iso.json  type_breakdown.json  value_at_risk.json
notebooks/: evaluation.ipynb
osint-investigator/: .gitignore  Dockerfile.railway  README.md  docker-compose.yml  railway.toml  start.sh
osint-investigator/backend/: Dockerfile  requirements.txt
osint-investigator/backend/app/: config.py  database.py  main.py
osint-investigator/backend/app/api/: routes.py
osint-investigator/backend/app/models/: __init__.py  (+3 more)
osint-investigator/backend/data/: ofac_sample.csv  pep_sample.csv
osint-investigator/frontend/: index.html  package-lock.json  package.json  vite.config.ts
osint-investigator/frontend/src/: App.tsx
scripts/: train.py
src/aml_detector/: config.py
src/aml_detector/api/: app.py  model_store.py  routes.py  schemas.py
src/aml_detector/data/: loader.py
src/aml_detector/evaluation/: metrics.py
src/aml_detector/explainability/: shap_explain.py
src/aml_detector/features/: engineering.py
src/aml_detector/graph/: analysis.py
src/aml_detector/models/: autoencoder.py  ensemble.py  isolation_forest.py  persistence.py
tests/: conftest.py  test_contracts.py  test_features.py  test_models.py  test_pipeline.py  test_real_data.py
(+36 files in other folders)
