[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aml-detector"
version = "0.1.0"
description = "Detecção de lavagem de dinheiro — Isolation Forest, Autoencoder, SHAP e Graph Analysis"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "tensorflow>=2.16",
    "shap>=0.45",
    "networkx>=3.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pyvis>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "real_data: testes que requerem o dataset PaySim real (use --data para ativar)",
]
